[gh-440] Fix flow arrow colors in dark mode

--- a/source/WebApp/less/imports/dark.less
+++ b/source/WebApp/less/imports/dark.less
@@ -169,6 +169,20 @@
     .CodeMirror-scrollbar-filler {
         background-color: transparent;
     }
+
+    .CodeMirror-jump-arrow-start {
+        fill: @dark-background-color;
+    }
+
+    .CodeMirror-jump-arrow {
+        fill: #87afb0;
+        stroke: #87afb0;
+    }
+
+    .CodeMirror-jump-arrow-up {
+        fill: #b0879b;
+        stroke: #b0879b;
+    }
 }
 
 .theme-dark {
